<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.wjybxx.commons</groupId>
    <artifactId>supports-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Supports-Parent</name>
    <description>game tools and framework</description>
    <url>https://github.com/hl845740757/BigCat</url>

    <modules>
        <module>annotations</module>
        <module>agent</module>
        <module>apt-base</module>
        <module>apt-common</module>
    </modules>

    <!-- 证书 -->
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- 供应者信息 -->
    <scm>
        <url>https://github.com/hl845740757/BigCat</url>
        <connection>scm:git:https://github.com/hl845740757/BigCat.git</connection>
    </scm>
    <!-- issue -->
    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/hl845740757/BigCat/issues</url>
    </issueManagement>
    <!-- 开发者信息 -->
    <developers>
        <developer>
            <name>wjybxx</name>
            <email>845740757@qq.com</email>
            <url>https://github.com/hl845740757</url>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <!-- java版本，最终会升级为jdk21 -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>

        <!-- 依赖版本 -->
        <slf4j.version>2.0.7</slf4j.version>
        <junit.version>5.9.2</junit.version>
        <jsr305.version>3.0.2</jsr305.version>
        <javapoet.version>1.13.0</javapoet.version>
    </properties>

    <!-- 基础依赖/全局依赖 -->
    <dependencies>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>${jsr305.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- 模块版本同步 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 指定参数-parameters，否则test目录下文件编译异常 -->
            <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <encoding>UTF8</encoding>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- 源码插件，未加载项目的情况下看源码 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- 以下操作较为耗时，仅在release模式下执行 -->
        <profile>
            <id>release</id>
            <!-- 发布管理，id与mvn setting.xml 中的 server 对应 -->
            <distributionManagement>
                <snapshotRepository>
                    <id>sonatype-oss</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>sonatype-oss</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
            <build>
                <plugins>
                    <!-- 文档插件 -->
                    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.4.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <!-- 注释不是特别规范，避免打包中断 -->
                                <configuration>
                                    <!-- <additionalJOption>-Xdoclint:none</additionalJOption> -->
                                    <doclint>none</doclint>
                                    <charset>UTF-8</charset>
                                    <locale>zh_CN</locale>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- gpg签名插件 -->
                    <plugin>
                        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <!-- id与mvn setting.xml的 gpg 配置中的 id 对应-->
                                <id>ossrh</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- maven部署相关插件 -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <version>3.1.1</version>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <!-- serverId与mvn setting.xml 中的 server 对应-->
                            <!-- 该插件用于自动close并release仓库，不使用插件则需要登录网页手动操作 -->
                            <serverId>sonatype-oss</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>